<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    android:id="@+id/activityLogin"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/background_light"
    tools:context=".Presenter.academicLoginActivity"

    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="50dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/TextEmailAddress"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:backgroundTint="#d3d3d3"
            android:textColor="@android:color/black"

            android:inputType="textEmailAddress"
            android:hint="@string/email"
            />
        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_marginTop="10dp"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:backgroundTint="#d3d3d3"
            android:textColor="@android:color/black"

            android:layout_gravity="center"
            android:inputType="textPassword"
            android:hint="@string/password"

            />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="#54AFBC"
            android:onClick="login"
            android:text="@string/login"
             />


    </LinearLayout>




</RelativeLayout>