...
    tools:context=".Presenter.StudentHomeScreenActivity">




    <Button
        android:id="@+id/termin_create_button"
        android:layout_width="270dp"
        android:layout_height="59dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="91dp"
        android:text="@string/search_for_an_appointment"
        android:textAlignment="center"
        android:textStyle="bold"
        app:backgroundTint="#54AFBC"
        android:onClick="searchAppointment"
        android:layout_centerHorizontal="true"

        app:layout_constraintBottom_toTopOf="@+id/Studenttermin_list_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />

    <Button
...
